2002-07-15  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/AE/MsgCatalog.py: MessageCatalogs now have a hasMessage()
	method, and getMessage can be now be used with a default value, or
	not. 

	* SkunkWeb/Services/ae_component.py (__initConfig): use
	DEFAULT_DOCROOT for mergeDefaulting into
	Configuration.documentRoot. 

	* SkunkWeb/SkunkWeb/confvars.py.in (DEFAULT_DOCROOT): captured 
	the DOCROOT configure variable.

	* SkunkWeb/SkunkWeb/ConfigAdditives.py (File, __all__): added
	RegexMatcher for location (File).

	* SkunkWeb/Services/rewrite.py: now test whether sessionDict has
	the relevant keys before deleting them.

2002-07-15  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* SkunkWeb/Services/extcgi.py (_dispenv): made it 2.1 compliant,
	and removed the if statment that should always be true.

2002-07-12  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* SkunkWeb/Services/templating/pil_preload.py: imports the
	entirety of the PIL package

	* SkunkWeb/Services/templating/UrlBuilder.py: now imports
	pil_preload if PIL is enabled

2002-07-11  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/SkunkWeb/confvars.py.in: adding.  Contains constants
	produced by configure.

	* Makefile.in, configure, configure.in, SkunkWeb/Makefile.in,
	SkunkWeb/configure, SkunkWeb/configure.in,
	SkunkWeb/skunkweb.py.in, SkunkWeb/sw.conf.in,
	SkunkWeb/swpython.py.in, SkunkWeb/Services/Makefile.in,
	SkunkWeb/Services/ae_component.py,
	SkunkWeb/Services/basicauth/swpasswd.py.in,
	SkunkWeb/Services/product/productwiz.in,
	SkunkWeb/SkunkWeb/LogObj.py, SkunkWeb/SkunkWeb/Server.py,
	SkunkWeb/SkunkWeb/bootloader.py.in,
	SkunkWeb/mod_skunkweb/httpd_conf.stub.in: changes to configuration
	so skunk actually works in other layouts.

2002-07-11  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* SkunkWeb/Services/extcgi.py: fixed so it changes to the
	directory of the cgi program

	* SkunkWeb/SkunkWeb/constants.py: added CGI_JOB
